--- a/Godot/Godot.csproj.old.1
+++ b/Godot/Godot.csproj.old.1
@@ -1,4 +1,4 @@
-<Project Sdk="Godot.NET.Sdk/4.4.0-beta">
+<Project Sdk="Godot.NET.Sdk/4.4.0-beta.3">
   <PropertyGroup>
     <StartAction>Program</StartAction>
     <StartProgram>d:\gamedev\godotsharp\bin\godot.windows.editor.dev.x86_64.mono.exe</StartProgram>
